Complete initial Minecraft 1.20.1 backport